# MAPR_Projekt

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: plan_trajectory.launch.py  plan_trajectory_with_viz.launch.py
src/: plan_trajectory.cpp  plan_trajectory_with_viz.cpp
